<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="droid">Droid Desert</string>
    <string name="donutOrder">showDonutOrder</string>
    <string name="iceCreamOrder">showIceCreamOrder</string>
    <string name="froyoOrder">showFroyoOrder</string>
    <string name="dffd">dffd</string>
    <string name="same_day_messenger_service">same day messenger service</string>
    <string name="next_day_ground_delivery">next day ground delivery</string>
    <string name="pick_up">pick up</string>
    <string-array name="labelArray">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
