<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/textIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/droid"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:onClick="@string/donutOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIntro"
        app:srcCompat="@drawable/donut_circle" />

    <ImageView
        android:id="@+id/iceCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:onClick="@string/iceCreamOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donut"
        app:srcCompat="@drawable/froyo_circle" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:onClick="@string/froyoOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iceCream"
        app:srcCompat="@drawable/icecream_circle" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="Donuts are glazed and sprinkled with candy."
            app:layout_constraintBottom_toBottomOf="@+id/donut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/donut"
            app:layout_constraintTop_toTopOf="@+id/donut" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="Ice cream sandwiches have chocolate wafers and vanilla filling."
        app:layout_constraintBottom_toBottomOf="@+id/iceCream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iceCream"
        app:layout_constraintTop_toTopOf="@+id/iceCream" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="FroYo is premium self-serve frozen yogurt."
        app:layout_constraintBottom_toBottomOf="@+id/froyo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/froyo"
        app:layout_constraintTop_toTopOf="@+id/froyo" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>